examples/v1alpha2/0-namespaces.yaml
# These namespaces can be used for examples without recreating them each time.
# Used in
# - site-src/v1alpha2/guides/multiple-ns.md
---
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-api-example-ns1
---
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-api-example-ns2
