examples/v1alpha2/reference-grant.yaml
## Used in:
## - site-src/concepts/security-model.md
## - site-src/blog/2021/introducing-v1alpha2.md
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: ReferenceGrant
metadata:
  name: allow-prod-traffic
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: prod
  to:
  - group: ""
    kind: Service
