examples/v1alpha2/tls-cert-cross-namespace.yaml
# Used in
# - site-src/v1alpha2/guides/tls.md

apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: cross-namespace-tls-gateway
  namespace: gateway-api-example-ns1
spec:
  gatewayClassName: acme-lb
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    hostname: "*.example.com"
    tls:
      certificateRefs:
      - kind: Secret
        group: ""
        name: wildcard-example-com-cert
        namespace: gateway-api-example-ns2
