examples/v1alpha2/http-filter.yaml
# Used in
# - site-src/v1alpha2/api-types/httproute.md

apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: http-filter-1
spec:
  hostnames:
    - my.filter.com
  rules:
    - filters:
      - type: RequestHeaderModifier
        requestHeaderModifier:
          add:
            - name: my-header
              value: foo
      backendRefs:
      - name: my-filter-svc1
        weight: 1
        port: 80
