examples/v1alpha2/traffic-split-1.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: foo-route
spec:
  parentRefs:
  - name: prod-web-gw
  hostnames:
  - foo.example.com
  rules:
  - backendRefs:
    - name: foo-v1
      port: 8080
  - matches:
    - headers:
      - type: Exact
        name: traffic
        value: test
    backendRefs:
    - name: foo-v2
      port: 8080
